<resources>
    <string name="app_name">BIggNews</string>
    <string name="buisness">Buisness</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>